Fixed small p tag size bug on mobile

--- a/resources/main.css
+++ b/resources/main.css
@@ -434,6 +434,7 @@ p.work {
 
   font-size: 1.25em;
   margin-left: 24px;
+  margin-right: 24px;
   margin-bottom: 10px;
 
   min-height: 10px;
